Fix commands